--- a/travel_app_pages/pubspec.yaml
+++ b/travel_app_pages/pubspec.yaml
@@ -59,8 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,11 +74,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Gellix
+      fonts:
+        - asset: assets/fonts/GellixBlackItalic.otf
+        - asset: assets/fonts/GellixBlack.otf
+        - asset: assets/fonts/GellixBold.otf
+        - asset: assets/fonts/GellixExtraBold.otf
+        - asset: assets/fonts/GellixMedium.otf
+        - asset: assets/fonts/GellixRegular.otf
+        - asset: assets/fonts/GellixSemiBold.otf
+        - asset: assets/fonts/GellixThin.otf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
